# TEK9030

./: .gitignore
week_1_introduction/: main.cpp
week_2_transformations/: CMakeLists.txt  get_to_know_eigen.cpp  main.cpp
week_2_transformations/.cache/clangd/index/: main.cpp.B8C35103056DD573.idx
week_3_blending/: CMakeLists.txt  main.cpp
week_3_blending/.cache/clangd/index/: main.cpp.A054493552BB186A.idx
week_4_segmentation/: CMakeLists.txt  main.cpp
week_4_segmentation/.cache/clangd/index/: common-lab-utils.cpp.07CC62D74BAD4F3A.idx  lab-segmentation.cpp.AAA09AB57B46D6A1.idx  main.cpp.9D7DE4A5DD5A0EDA.idx  multivariate-normal-model.cpp.A4E3BCF3E8CC1D78.idx
week_4_segmentation/include/: common-lab-utils.cpp  common-lab-utils.h  lab-segmentation.cpp  lab-segmentation.h  multivariate-normal-model.cpp  multivariate-normal-model.h
week_6_feature_detection/: CMakeLists.txt
week_6_feature_detection/include/: circle.h  corner_detector.cpp  filters.cpp  filters.h  lab_corners.cpp
